--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "chart.js": "^4.4.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.19.2",
+    "lucide-react": "^0.433.0",
     "next": "14.2.6",
     "query-string": "^9.1.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
